--- a/index.css
+++ b/index.css
@@ -10,12 +10,11 @@
 
 }
 .page {
-  color: 	#4B0082;
+  color: #4B0082;
   padding: 20px;
   text-align: center;
   list-style-position: inside;
   width: auto;
-  margin: 0 auto;
   box-sizing: border-box;
   height: 720px;
 }
@@ -28,6 +27,7 @@
   justify-content: center;
   height: 620px;
   align-items: stretch;
+  overflow: hidden;
 }
 
 .about,
@@ -35,6 +35,7 @@
 .experience,
 .contact {
   display: flex;
+  justify-content: center;
   border: 2px solid #8B008B;
   margin: 20px;
   height: auto;
